--- a/Home.html
+++ b/Home.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -71,16 +71,16 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-hover-custom-color-1 u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
-</li><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-hover-custom-color-1 u-nav-link" href="Home.html">Home</a>
+            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-nav-link" href="Home.html">Home</a>
+</li><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
 </li></ul>
               </div>
             </div>
@@ -167,7 +167,7 @@
                     <div class="u-layout-row">
                       <div class="u-align-left u-container-style u-layout-cell u-palette-2-base u-radius-25 u-shape-round u-size-60 u-layout-cell-1">
                         <div class="u-container-layout u-valign-middle u-container-layout-1">
-                          <p class="u-text u-text-default u-text-1"> Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. You day real less till dear read. Considered use dispatched melancholy sympathize discretion led. Oh feel if up to till like.&nbsp;He an thing rapid these after going drawn or.&nbsp;</p>
+                          <p class="u-text u-text-default u-text-1">Organic products are grown under a system of agriculture without the use of chemical fertilizers and pesticides with an environmentally and socially responsible approach. This is a method of farming that works at grass root level preserving the reproductive and regenerative capacity of the soil, good plant nutrition, and sound soil management, produces nutritious food rich in vitality which has resistance to diseases.</p>
                         </div>
                       </div>
                     </div>
@@ -179,10 +179,9 @@
                   <div class="u-size-30">
                     <div class="u-layout-row">
                       <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-2">
-                        <div class="u-container-layout u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-spacing-10 u-icon-1"><img src="images/7089905.png" alt=""></span>
-                          <h2 class="u-text u-text-default u-text-palette-1-base u-text-2"> Weight loss nutrition plan</h2>
-                          <p class="u-text u-text-3"> The result of our company branding process is a comprehensive brand guideline that can be used to design a <a href="https://nicepage.com/k/auction-website-templates" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-1">marketing website</a> and other design assets like brand illustrations that reflect the new brand.
-                          </p>
+                        <div class="u-container-layout u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-spacing-10 u-icon-1"><img src="images/1588024.png" alt=""></span>
+                          <h2 class="u-text u-text-default u-text-palette-1-base u-text-2">Organic and Sustainable Agriculture</h2>
+                          <p class="u-text u-text-3"> Organic farming is a particularly resource-conserving and environmentally friendly farming system based on the principle of sustainability.</p>
                         </div>
                       </div>
                     </div>
@@ -193,8 +192,9 @@
                         <div class="u-layout-col">
                           <div class="u-container-style u-layout-cell u-palette-1-base u-radius-25 u-shape-round u-size-60 u-layout-cell-3">
                             <div class="u-container-layout u-container-layout-3">
-                              <h6 class="u-text u-text-default u-text-4">Sample Headline</h6>
-                              <p class="u-text u-text-5"> Justo donec enim diam vulputate ut pharetra. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Venenatis lectus magna fringilla urna porttitor rhoncus dolor.</p>
+                              <h6 class="u-text u-text-default u-text-4">Sustainable</h6>
+                              <p class="u-text u-text-5">Organic farming is widely considered to be a far more sustainable alternative when it comes to food production.&nbsp;<b>The lack of pesticides and wider variety of plants enhances biodiversity and results in better soil quality and reduced pollution from fertilizer or pesticide run-off</b>.
+                              </p>
                             </div>
                           </div>
                         </div>
@@ -203,8 +203,7 @@
                         <div class="u-layout-col">
                           <div class="u-container-style u-layout-cell u-radius-25 u-shape-round u-size-60 u-white u-layout-cell-4">
                             <div class="u-container-layout u-container-layout-4">
-                              <h6 class="u-text u-text-default u-text-6">Sample Headline</h6>
-                              <p class="u-text u-text-7"> Justo donec enim diam vulputate ut pharetra. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Venenatis lectus magna fringilla urna porttitor rhoncus dolor.</p>
+                              <p class="u-text u-text-6">Organic farming is focused on the inputs used in production (e.g. non-GMO, no synthetic fertilizer/pesticides/herbicides), whereas sustainable farming is focused on the physical treatment of the land (e.g. no till, cover crops, buffer zones)</p>
                             </div>
                           </div>
                         </div>
@@ -262,18 +261,21 @@
             <div class="u-size-27">
               <div class="u-layout-col">
                 <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-white u-layout-cell-1">
-                  <div class="u-container-layout u-container-layout-2">
-                    <h6 class="u-text u-text-palette-2-base u-text-1">Join our newsletter</h6>
-                    <h2 class="u-text u-text-grey-70 u-text-2">Contact us</h2>
-                    <p class="u-text u-text-grey-50 u-text-3">131 Kavalhosahalli, Bengaluru, India<br>Mon – Fri: 9:00 am – 8:00 pm,<br>Sat:&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 9:00 am – 2 pm<br>
-                      <a href="https://nicepage.cc" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">napuor@gmail.com</a>
+                  <div class="u-container-layout u-valign-bottom u-container-layout-2">
+                    <h2 class="u-text u-text-grey-70 u-text-1">Contact us</h2>
+                    <p class="u-text u-text-grey-50 u-text-2">131 Kavalhosahalli, Bengaluru, India<br>Mon – Fri: 9:00 am – 8:00 pm,<br>Sat:&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 9:00 am – 2 pm<br>
+                      <a href="https://nicepage.cc" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-4-base u-btn-1">napuor@gmail.com</a>
                     </p>
+                    <a href="https://nicepage.com/wordpress-website-builder" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-palette-4-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2">
+                      <span style="font-size: 1.25rem;"></span><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>
+                      <span style="font-size: 1.25rem;">&nbsp;+91 7899467369</span>
+                    </a>
                   </div>
                 </div>
                 <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-white u-layout-cell-2">
                   <div class="u-container-layout u-container-layout-3">
-                    <h2 class="u-text u-text-grey-70 u-text-4">Follow us</h2><span class="u-file-icon u-icon u-icon-1" data-href="https://www.facebook.com/people/napuor7/100067083813353/"><img src="images/5968764.png" alt=""></span><span class="u-file-icon u-icon u-icon-2" data-href="https://instagram.com/napuor_eat_organic_grow_safe?igshid=YmMyMTA2M2Y="><img src="images/2111463.png" alt=""></span>
-                    <p class="u-text u-text-5">©2022 Privacy policy</p>
+                    <h2 class="u-text u-text-grey-70 u-text-3">Follow us</h2><span class="u-file-icon u-icon u-icon-2" data-href="https://www.facebook.com/people/napuor7/100067083813353/"><img src="images/5968764.png" alt=""></span><span class="u-file-icon u-icon u-icon-3" data-href="https://instagram.com/napuor_eat_organic_grow_safe?igshid=YmMyMTA2M2Y="><img src="images/2111463.png" alt=""></span>
+                    <p class="u-text u-text-4">©2022 Privacy policy</p>
                   </div>
                 </div>
               </div>
@@ -282,7 +284,7 @@
               <div class="u-layout-row">
                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-white u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-4">
-                    <h5 class="u-text u-text-default u-text-palette-2-base u-text-6">Download app</h5><span class="u-file-icon u-icon u-icon-3" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-4" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en"><img src="images/5977575.png" alt=""></span>
+                    <h5 class="u-text u-text-default u-text-palette-2-base u-text-5">Download app</h5><span class="u-file-icon u-icon u-icon-4" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-5" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en"><img src="images/5977575.png" alt=""></span>
                     <img class="u-expanded-width u-image u-image-default u-image-1" src="images/rice_sow_adult_ancient_asia_the_job_pretty_beauty-1026149.jpg" alt="" data-image-width="1200" data-image-height="786" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
                   </div>
                 </div>
