--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-overlap u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -60,16 +60,16 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-hover-custom-color-1 u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
-</li><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-hover-custom-color-1 u-nav-link" href="Home.html">Home</a>
+            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-nav-link" href="Home.html">Home</a>
+</li><li class="u-nav-item"><a class="u-active-palette-3-base u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">NaPuOr Products</a>
 </li></ul>
               </div>
             </div>
