--- a/Home.html
+++ b/Home.html
@@ -101,27 +101,27 @@
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/1046790.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/1046790.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-3">Sauce</h6>
-                <p class="u-text u-text-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-4">Organic Jaggery and Organic Spices,Himalayan Pink Salt</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/590749.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/590749.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-5">Coffee</h6>
-                <p class="u-text u-text-6">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-6">Exceptionally low acrylamide content&nbsp;</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4"><span class="u-file-icon u-icon u-icon-3"><img src="images/3063433.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4"><span class="u-file-icon u-icon u-icon-3"><img src="images/3063433.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-7">Edible Oil</h6>
-                <p class="u-text u-text-8">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-8">Rich in vitamins, minerals, proteins, essential&nbsp;oils, and fatty acids</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5"><span class="u-file-icon u-icon u-icon-4"><img src="images/3453333.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5"><span class="u-file-icon u-icon u-icon-4"><img src="images/3453333.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-9">Millets</h6>
-                <p class="u-text u-text-10">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-10">Organic Millet&nbsp;hulled, whole grain seeds, gluten free</p>
               </div>
             </div>
           </div>
