--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://napuor.nicepage.io/Home.html?version=57f1ed49-eb77-4d64-9006-52c65a205b6b" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+  <body data-home-page="https://napuor.nicepage.io/Home.html?version=d2e98425-fa7d-4a56-8698-681a31a151cb" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -101,27 +101,27 @@
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/1046790.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/1046790.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-3">Sauce</h6>
-                <p class="u-text u-text-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-4">Organic Jaggery and Organic Spices,Himalayan Pink Salt</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/590749.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/590749.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-5">Coffee</h6>
-                <p class="u-text u-text-6">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-6">Exceptionally low acrylamide content&nbsp;</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4"><span class="u-file-icon u-icon u-icon-3"><img src="images/3063433.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4"><span class="u-file-icon u-icon u-icon-3"><img src="images/3063433.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-7">Edible Oil</h6>
-                <p class="u-text u-text-8">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-8">Rich in vitamins, minerals, proteins, essential&nbsp;oils, and fatty acids</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5"><span class="u-file-icon u-icon u-icon-4"><img src="images/3453333.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5"><span class="u-file-icon u-icon u-icon-4"><img src="images/3453333.png" alt=""></span>
                 <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-9">Millets</h6>
-                <p class="u-text u-text-10">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <p class="u-text u-text-10">Organic Millet&nbsp;hulled, whole grain seeds, gluten free</p>
               </div>
             </div>
           </div>
@@ -299,6 +299,16 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-c04b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">NaPuOr Organics (A division of Zyppr Solutions Bengaluru, India)</p>
       </div></footer>
-    
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/templates" target="_blank">
+        <span>Template</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
+        <span>HTML Website Builder</span>
+      </a>. 
+    </section>
   </body>
 </html>
