--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://napuor.nicepage.io/Home.html?version=d2e98425-fa7d-4a56-8698-681a31a151cb" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313">
+  <body data-home-page="https://napuor.nicepage.io/Home.html?version=dbf7895d-7a65-4255-ab8a-dabe8bd61c76" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313" title="https://napuor.github.io/">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
@@ -86,7 +86,7 @@
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav><span class="u-file-icon u-icon u-icon-1" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-2"><img src="images/5977575.png" alt=""></span>
+        </nav><span class="u-file-icon u-icon u-icon-1" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-2" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
       </div></header> 
     <section class="u-clearfix u-grey-5 u-section-1" id="carousel_86f6">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -130,7 +130,7 @@
     </section>
     <section class="u-clearfix u-grey-5 u-section-2" id="sec-0b6e">
       <div class="u-palette-1-dark-2 u-shape u-shape-rectangle u-shape-1"></div>
-      <img src="images/tomatosaucefs.png" alt="" class="u-image u-image-round u-radius-24 u-image-1" data-image-width="864" data-image-height="864" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
+      <img src="images/tomatosaucefs.png" alt="" class="u-image u-image-round u-radius-24 u-image-1" data-image-width="864" data-image-height="864" data-href="https://napuor.github.io/">
       <div class="u-align-center u-container-style u-group u-palette-2-base u-radius-25 u-shape-round u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-1"> Best Organic Tomato Sauce</h2>
@@ -147,7 +147,7 @@
     <section class="u-clearfix u-grey-5 u-valign-middle-md u-section-3" id="carousel_f0b4">
       <div class="u-bottom-left-radius-20 u-expanded-height u-palette-1-base u-shape u-shape-round u-shape-1"></div>
       <div class="u-palette-2-base u-radius-25 u-shape u-shape-round u-shape-2"></div>
-      <img src="images/desi-cow-ghee.jpg" class="u-align-left u-image u-image-round u-radius-25 u-image-1" data-image-width="960" data-image-height="960" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
+      <img src="images/desi-cow-ghee.jpg" class="u-align-left u-image u-image-round u-radius-25 u-image-1" data-image-width="960" data-image-height="960" data-href="https://napuor.github.io/">
       <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-similar-fill u-white u-group-1">
         <div class="u-container-layout u-padding-12 u-valign-middle u-container-layout-1">
           <h3 class="u-text u-text-default u-text-1">Desi Cow Ghee</h3>
@@ -220,7 +220,7 @@
     <section class="u-clearfix u-grey-5 u-section-5" id="carousel_14f9">
       <div class="u-bottom-right-radius-25 u-palette-1-base u-shape u-shape-round u-shape-1"></div>
       <div class="u-bottom-right-radius-25 u-palette-2-base u-shape u-shape-round u-shape-2"></div>
-      <img class="u-image u-image-round u-radius-25 u-image-1" alt="" data-image-width="500" data-image-height="300" src="images/millet.png" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
+      <img class="u-image u-image-round u-radius-25 u-image-1" alt="" data-image-width="500" data-image-height="300" src="images/millet.png" data-href="https://napuor.github.io/">
       <div class="u-container-style u-group u-palette-1-base u-shape-rectangle u-group-1">
         <div class="u-container-layout u-valign-top u-container-layout-1">
           <h3 class="u-align-left u-text u-text-body-alt-color u-text-1"> Tasty and Pure</h3>
@@ -236,14 +236,14 @@
           <h2 class="u-text u-text-1">Instant Coffee</h2>
           <p class="u-text u-text-2"> Organic Instant Coffee tastes great and is&nbsp;<b>much healthier than regular instant coffee</b>&nbsp;because Organic Instant Coffee doesn't contain any harmful chemicals, preservatives, or artificial ingredients.
           </p>
-          <div class="u-image u-image-circle u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"></div>
+          <div class="u-image u-image-circle u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://napuor.github.io/"></div>
         </div>
       </div>
     </section>
     <section class="u-clearfix u-grey-5 u-section-7" id="carousel_ad74">
       <div class="u-expanded-width u-palette-1-base u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-palette-2-base u-radius-25 u-shape u-shape-round u-shape-2"></div>
-      <img class="u-image u-image-round u-radius-25 u-image-1" data-image-width="1280" data-image-height="853" src="images/g5a005ced2e703214bdaac4ba0c9712c836db19d71d9afcc337c51bb4d5bf2a2d2394edb089111dda2a12434d7b88cdb9a5ffccaae8244e5b8f0cb793a13bb990_1280.jpg" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
+      <img class="u-image u-image-round u-radius-25 u-image-1" data-image-width="1280" data-image-height="853" src="images/g5a005ced2e703214bdaac4ba0c9712c836db19d71d9afcc337c51bb4d5bf2a2d2394edb089111dda2a12434d7b88cdb9a5ffccaae8244e5b8f0cb793a13bb990_1280.jpg" data-href="https://napuor.github.io/">
       <div class="u-align-left u-container-style u-group u-radius-25 u-shape-round u-white u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h3 class="u-text u-text-default u-text-1"> Natural and organic</h3>
@@ -285,7 +285,7 @@
                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-white u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-4">
                     <h5 class="u-text u-text-default u-text-palette-2-base u-text-5">Download app</h5><span class="u-file-icon u-icon u-icon-4" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-5" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en"><img src="images/5977575.png" alt=""></span>
-                    <img class="u-expanded-width u-image u-image-default u-image-1" src="images/rice_sow_adult_ancient_asia_the_job_pretty_beauty-1026149.jpg" alt="" data-image-width="1200" data-image-height="786" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN">
+                    <img class="u-expanded-width u-image u-image-default u-image-1" src="images/rice_sow_adult_ancient_asia_the_job_pretty_beauty-1026149.jpg" alt="" data-image-width="1200" data-image-height="786" data-href="https://napuor.github.io/">
                   </div>
                 </div>
               </div>
