--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-overlap u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-f836"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313">
+        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313" title="https://napuor.github.io/">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
@@ -75,7 +75,7 @@
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav><span class="u-file-icon u-icon u-icon-1" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-2"><img src="images/5977575.png" alt=""></span>
+        </nav><span class="u-file-icon u-icon u-icon-1" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-2" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
       </div></header> 
     
     
