--- a/Home.html
+++ b/Home.html
@@ -74,7 +74,7 @@
 	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>napuor@gmail.com
         </a><span class="u-file-icon u-icon u-icon-3" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-4" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
       </div></header> 
-    <section class="u-clearfix u-grey-5 u-valign-top u-section-1" id="carousel_86f6">
+    <section class="u-clearfix u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-1" id="carousel_86f6">
       <div class="u-bottom-right-radius-25 u-container-style u-gradient u-group u-shape-round u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <div class="u-align-left u-container-style u-group u-palette-1-dark-2 u-radius-25 u-shape-round u-group-2">
