--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://napuor.nicepage.io/Home.html?version=b9832149-ddb7-48de-88d9-e32fd49375f9" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-7b7d u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="https://napuor.nicepage.io/Home.html?version=e346b367-392b-4dcc-b52e-3d388b08ed5e" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-7b7d u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
@@ -74,7 +74,7 @@
 	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>napuor@gmail.com
         </a><span class="u-file-icon u-icon u-icon-3" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-4" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
       </div></header> 
-    <section class="u-clearfix u-grey-5 u-valign-top u-section-1" id="carousel_86f6">
+    <section class="u-clearfix u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-1" id="carousel_86f6">
       <div class="u-bottom-right-radius-25 u-container-style u-gradient u-group u-shape-round u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <div class="u-align-left u-container-style u-group u-palette-1-dark-2 u-radius-25 u-shape-round u-group-2">
