--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://napuor.github.io/" style="padding: 10px 20px;">Organic</a>
+</li><li class="u-nav-item"><a class="u-button-style u-hover-palette-3-base u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://napuor.github.io/" style="padding: 10px 20px;">E-Commerce</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -65,7 +65,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">Organic</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://napuor.github.io/">E-Commerce</a>
 </li></ul>
               </div>
             </div>
