--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
           </div>
           <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6"><span class="u-file-icon u-icon u-icon-4" data-href="https://napuor.github.io/"><img src="images/3453333.png" alt=""></span>
-              <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-9">Millets</h6>
+              <h6 class="u-custom-font u-font-pt-sans u-text u-text-palette-1-base u-text-9">Chocolate</h6>
               <p class="u-text u-text-10">
-                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4" href="https://napuor.github.io/">Organic Millet&nbsp;hulled, whole grain seeds, gluten free</a>
+                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4" href="https://napuor.github.io/">Organic Dark Chocolate&nbsp;made from single origin cocoa solids from Nilgiris</a>
               </p>
             </div>
           </div>
